changed boolean creation